# template-rust

./: Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-documentation.yml
crates/crate1/: Cargo.toml  README.md
